Perldoop3/src/perldoop/sintactico/y.output
   0  $accept : raiz $end

   1  raiz : fuente

   2  fuente : masFuente cuerpo

   3  masFuente :
   4            | fuente funcionDef

   5  funcionDef : funcionSub '{' cuerpo '}'

   6  funcionSub : SUB ID

   7  cuerpoR : sentencia
   8          | cuerpoR sentencia

   9  cuerpoNV : cuerpoR

  10  cuerpo :
  11         | cuerpoNV

  12  sentencia : lista modificador ';'
  13            | ';'
  14            | bloque
  15            | flujo
  16            | modulos
  17            | IMPORT_JAVA
  18            | LINEA_JAVA
  19            | COMENTARIO
  20            | DECLARACION_TIPO
  21            | error ';'
  22            | error '}'
  23            | error '{'

  24  modulos : USE paqueteID ID ';'
  25          | USE ID ';'
  26          | PACKAGE paqueteID ID ';'
  27          | PACKAGE ID ';'

  28  expresion : numero
  29            | cadena
  30            | variable
  31            | varMulti
  32            | asignacion
  33            | binario
  34            | aritmetica
  35            | logico
  36            | comparacion
  37            | coleccion
  38            | acceso
  39            | funcion
  40            | '&' funcion
  41            | lectura
  42            | std
  43            | regulares
  44            | expresion DOS_PUNTOS expresion

  45  lista : listaR
  46        | listaR ','

  47  listaR : listaR ',' expresion
  48         | expresion

  49  modificador :
  50              | IF expresion
  51              | UNLESS expresion
  52              | WHILE expresion
  53              | UNTIL expresion
  54              | FOR expresion

  55  flujo : NEXT ';'
  56        | LAST ';'
  57        | RETURN ';'
  58        | RETURN expresion ';'

  59  asignacion : expresion '=' expresion
  60             | expresion MAS_IGUAL expresion
  61             | expresion MENOS_IGUAL expresion
  62             | expresion MULTI_IGUAL expresion
  63             | expresion DIV_IGUAL expresion
  64             | expresion MOD_IGUAL expresion
  65             | expresion POW_IGUAL expresion
  66             | expresion AND_IGUAL expresion
  67             | expresion OR_IGUAL expresion
  68             | expresion XOR_IGUAL expresion
  69             | expresion DESP_D_IGUAL expresion
  70             | expresion DESP_I_IGUAL expresion
  71             | expresion LAND_IGUAL expresion
  72             | expresion LOR_IGUAL expresion
  73             | expresion DLOR_IGUAL expresion
  74             | expresion X_IGUAL expresion
  75             | expresion CONCAT_IGUAL expresion

  76  numero : ENTERO
  77         | DECIMAL

  78  cadena : '\'' TEXTO '\''
  79         | '"' cadenaTexto '"'
  80         | '`' cadenaTexto '`'
  81         | Q SEP TEXTO SEP
  82         | QW SEP TEXTO SEP
  83         | QQ SEP cadenaTexto SEP
  84         | QR SEP cadenaTexto SEP
  85         | QX SEP cadenaTexto SEP

  86  cadenaTexto : cadenaTextoR

  87  cadenaTextoR :
  88               | cadenaTextoR EXP_SEP expresion EXP_SEP
  89               | cadenaTextoR TEXTO

  90  variable : '$' VAR
  91           | '@' VAR
  92           | '%' VAR
  93           | '$' paqueteVar VAR
  94           | '@' paqueteVar VAR
  95           | '%' paqueteVar VAR
  96           | '$' '#' VAR
  97           | '$' '#' paqueteVar VAR
  98           | MY '$' VAR
  99           | MY '@' VAR
 100           | MY '%' VAR
 101           | OUR '$' VAR
 102           | OUR '@' VAR
 103           | OUR '%' VAR

 104  varMulti : MY '(' lista ')'
 105           | OUR '(' lista ')'

 106  paqueteVar : paqueteVar VAR AMBITO
 107             | VAR AMBITO

 108  paqueteID : paqueteID ID AMBITO
 109            | ID AMBITO

 110  colParen : '(' lista ')'
 111           | '(' ')'

 112  colRef : '[' lista ']'
 113         | '[' ']'
 114         | '{' lista '}'
 115         | '{' '}'

 116  coleccion : colParen
 117            | colRef

 118  acceso : expresion colRef
 119         | expresion FLECHA colRef
 120         | '$' expresion
 121         | '@' expresion
 122         | '%' expresion
 123         | '\\' expresion

 124  funcion : ID expresion
 125          | ID_P colParen
 126          | ID
 127          | paqueteID ID expresion
 128          | paqueteID ID_P colParen
 129          | paqueteID ID
 130          | ID handle expresion
 131          | ID_P '(' handle expresion ')'
 132          | ID '{' lista '}' expresion

 133  handle : STDOUT_H
 134         | STDERR_H
 135         | FILE VAR

 136  std : STDIN
 137      | STDOUT
 138      | STDERR

 139  lectura : '<' expresion '>'
 140          | '<' '>'

 141  binario : expresion '|' expresion
 142          | expresion '&' expresion
 143          | '~' expresion
 144          | expresion '^' expresion
 145          | expresion DESP_I expresion
 146          | expresion DESP_D expresion

 147  logico : expresion LOR expresion
 148         | expresion DLOR expresion
 149         | expresion LAND expresion
 150         | '!' expresion
 151         | expresion LLOR expresion
 152         | expresion LLAND expresion
 153         | LLNOT expresion
 154         | expresion LLXOR expresion
 155         | expresion '?' expresion ':' expresion

 156  comparacion : expresion NUM_EQ expresion
 157              | expresion NUM_NE expresion
 158              | expresion '<' expresion
 159              | expresion NUM_LE expresion
 160              | expresion '>' expresion
 161              | expresion NUM_GE expresion
 162              | expresion CMP_NUM expresion
 163              | expresion STR_EQ expresion
 164              | expresion STR_NE expresion
 165              | expresion STR_LT expresion
 166              | expresion STR_LE expresion
 167              | expresion STR_GT expresion
 168              | expresion STR_GE expresion
 169              | expresion CMP expresion
 170              | expresion SMART_EQ expresion

 171  aritmetica : expresion '+' expresion
 172             | expresion '-' expresion
 173             | expresion '*' expresion
 174             | expresion '/' expresion
 175             | expresion POW expresion
 176             | expresion X expresion
 177             | expresion '.' expresion
 178             | expresion '%' expresion
 179             | '+' expresion
 180             | '-' expresion
 181             | MAS_MAS expresion
 182             | MENOS_MENOS expresion
 183             | expresion MAS_MAS
 184             | expresion MENOS_MENOS

 185  regulares : expresion STR_REX M_REX SEP cadenaTexto SEP rexMod
 186            | expresion STR_REX SEP cadenaTexto SEP rexMod
 187            | expresion STR_NO_REX M_REX SEP cadenaTexto SEP rexMod
 188            | expresion STR_NO_REX SEP cadenaTexto SEP rexMod
 189            | expresion STR_REX S_REX SEP cadenaTexto SEP cadenaTexto SEP rexMod
 190            | expresion STR_REX Y_REX SEP cadenaTexto SEP cadenaTexto SEP rexMod

 191  rexMod :
 192         | REX_MOD

 193  abrirBloque :

 194  listaFor :
 195           | lista

 196  bloque : '{' cuerpoNV '}'
 197         | WHILE abrirBloque '(' expresion ')' '{' cuerpo '}'
 198         | UNTIL abrirBloque '(' expresion ')' '{' cuerpo '}'
 199         | DO abrirBloque '{' cuerpo '}' WHILE '(' expresion ')' ';'
 200         | DO abrirBloque '{' cuerpo '}' UNTIL '(' expresion ')' ';'
 201         | FOR abrirBloque '(' listaFor ';' listaFor ';' listaFor ')' '{' cuerpo '}'
 202         | FOR abrirBloque variable colParen '{' cuerpo '}'
 203         | FOR abrirBloque colParen '{' cuerpo '}'
 204         | IF abrirBloque '(' expresion ')' '{' cuerpo '}' condicional
 205         | UNLESS abrirBloque '(' expresion ')' '{' cuerpo '}' condicional

 206  condicional :
 207              | ELSIF '(' expresion ')' '{' cuerpo '}' condicional
 208              | ELSE '{' cuerpo '}'

state 0
	$accept : . raiz $end  (0)
	masFuente : .  (3)

	.  reduce 3

	raiz  goto 1
	fuente  goto 2
	masFuente  goto 3


state 1
	$accept : raiz . $end  (0)

	$end  accept


state 2
	raiz : fuente .  (1)
	masFuente : fuente . funcionDef  (4)

	SUB  shift 4
	$end  reduce 1

	funcionDef  goto 5
	funcionSub  goto 6


state 3
	fuente : masFuente . cuerpo  (2)
	cuerpo : .  (10)

	error  shift 7
	COMENTARIO  shift 8
	DECLARACION_TIPO  shift 9
	IMPORT_JAVA  shift 10
	LINEA_JAVA  shift 11
	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	PACKAGE  shift 19
	WHILE  shift 20
	DO  shift 21
	FOR  shift 22
	UNTIL  shift 23
	USE  shift 24
	IF  shift 25
	UNLESS  shift 26
	LAST  shift 27
	NEXT  shift 28
	RETURN  shift 29
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 48
	ID_P  shift 49
	';'  shift 50
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	$end  reduce 10
	SUB  reduce 10

	cuerpo  goto 57
	cuerpoR  goto 58
	sentencia  goto 59
	cuerpoNV  goto 60
	lista  goto 61
	bloque  goto 62
	flujo  goto 63
	modulos  goto 64
	paqueteID  goto 65
	expresion  goto 66
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	listaR  goto 82
	colParen  goto 83
	colRef  goto 84


state 4
	funcionSub : SUB . ID  (6)

	ID  shift 85
	.  error


state 5
	masFuente : fuente funcionDef .  (4)

	.  reduce 4


state 6
	funcionDef : funcionSub . '{' cuerpo '}'  (5)

	'{'  shift 86
	.  error


state 7
	sentencia : error . ';'  (21)
	sentencia : error . '}'  (22)
	sentencia : error . '{'  (23)

	'{'  shift 87
	'}'  shift 88
	';'  shift 89
	.  error


state 8
	sentencia : COMENTARIO .  (19)

	.  reduce 19


state 9
	sentencia : DECLARACION_TIPO .  (20)

	.  reduce 20


state 10
	sentencia : IMPORT_JAVA .  (17)

	.  reduce 17


state 11
	sentencia : LINEA_JAVA .  (18)

	.  reduce 18


state 12
	numero : ENTERO .  (76)

	.  reduce 76


state 13
	numero : DECIMAL .  (77)

	.  reduce 77


state 14
	std : STDIN .  (136)

	.  reduce 136


state 15
	std : STDOUT .  (137)

	.  reduce 137


state 16
	std : STDERR .  (138)

	.  reduce 138


state 17
	variable : MY . '$' VAR  (98)
	variable : MY . '@' VAR  (99)
	variable : MY . '%' VAR  (100)
	varMulti : MY . '(' lista ')'  (104)

	'%'  shift 90
	'('  shift 91
	'$'  shift 92
	'@'  shift 93
	.  error


state 18
	variable : OUR . '$' VAR  (101)
	variable : OUR . '@' VAR  (102)
	variable : OUR . '%' VAR  (103)
	varMulti : OUR . '(' lista ')'  (105)

	'%'  shift 94
	'('  shift 95
	'$'  shift 96
	'@'  shift 97
	.  error


state 19
	modulos : PACKAGE . paqueteID ID ';'  (26)
	modulos : PACKAGE . ID ';'  (27)

	ID  shift 98
	.  error

	paqueteID  goto 99


state 20
	bloque : WHILE . abrirBloque '(' expresion ')' '{' cuerpo '}'  (197)
	abrirBloque : .  (193)

	.  reduce 193

	abrirBloque  goto 100


state 21
	bloque : DO . abrirBloque '{' cuerpo '}' WHILE '(' expresion ')' ';'  (199)
	bloque : DO . abrirBloque '{' cuerpo '}' UNTIL '(' expresion ')' ';'  (200)
	abrirBloque : .  (193)

	.  reduce 193

	abrirBloque  goto 101


state 22
	bloque : FOR . abrirBloque '(' listaFor ';' listaFor ';' listaFor ')' '{' cuerpo '}'  (201)
	bloque : FOR . abrirBloque variable colParen '{' cuerpo '}'  (202)
	bloque : FOR . abrirBloque colParen '{' cuerpo '}'  (203)
	abrirBloque : .  (193)

	.  reduce 193

	abrirBloque  goto 102


state 23
	bloque : UNTIL . abrirBloque '(' expresion ')' '{' cuerpo '}'  (198)
	abrirBloque : .  (193)

	.  reduce 193

	abrirBloque  goto 103


state 24
	modulos : USE . paqueteID ID ';'  (24)
	modulos : USE . ID ';'  (25)

	ID  shift 104
	.  error

	paqueteID  goto 105


state 25
	bloque : IF . abrirBloque '(' expresion ')' '{' cuerpo '}' condicional  (204)
	abrirBloque : .  (193)

	.  reduce 193

	abrirBloque  goto 106


state 26
	bloque : UNLESS . abrirBloque '(' expresion ')' '{' cuerpo '}' condicional  (205)
	abrirBloque : .  (193)

	.  reduce 193

	abrirBloque  goto 107


state 27
	flujo : LAST . ';'  (56)

	';'  shift 108
	.  error


state 28
	flujo : NEXT . ';'  (55)

	';'  shift 109
	.  error


state 29
	flujo : RETURN . ';'  (57)
	flujo : RETURN . expresion ';'  (58)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	';'  shift 111
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 112
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 30
	cadena : Q . SEP TEXTO SEP  (81)

	SEP  shift 113
	.  error


state 31
	cadena : QQ . SEP cadenaTexto SEP  (83)

	SEP  shift 114
	.  error


state 32
	cadena : QR . SEP cadenaTexto SEP  (84)

	SEP  shift 115
	.  error


state 33
	cadena : QW . SEP TEXTO SEP  (82)

	SEP  shift 116
	.  error


state 34
	cadena : QX . SEP cadenaTexto SEP  (85)

	SEP  shift 117
	.  error


state 35
	logico : LLNOT . expresion  (153)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 118
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 36
	paqueteID : ID . AMBITO  (109)
	funcion : ID . expresion  (124)
	funcion : ID .  (126)
	funcion : ID . handle expresion  (130)
	funcion : ID . '{' lista '}' expresion  (132)

	FILE  shift 119
	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	STDOUT_H  shift 120
	STDERR_H  shift 121
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 122
	ID_P  shift 49
	AMBITO  shift 123
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	EXP_SEP  reduce 126
	WHILE  reduce 126
	FOR  reduce 126
	UNTIL  reduce 126
	IF  reduce 126
	UNLESS  reduce 126
	LLOR  reduce 126
	LLXOR  reduce 126
	LLAND  reduce 126
	','  reduce 126
	'='  reduce 126
	MULTI_IGUAL  reduce 126
	DIV_IGUAL  reduce 126
	MOD_IGUAL  reduce 126
	MAS_IGUAL  reduce 126
	MENOS_IGUAL  reduce 126
	DESP_I_IGUAL  reduce 126
	DESP_D_IGUAL  reduce 126
	AND_IGUAL  reduce 126
	OR_IGUAL  reduce 126
	XOR_IGUAL  reduce 126
	POW_IGUAL  reduce 126
	LAND_IGUAL  reduce 126
	LOR_IGUAL  reduce 126
	DLOR_IGUAL  reduce 126
	CONCAT_IGUAL  reduce 126
	X_IGUAL  reduce 126
	':'  reduce 126
	'?'  reduce 126
	DOS_PUNTOS  reduce 126
	LOR  reduce 126
	DLOR  reduce 126
	LAND  reduce 126
	'|'  reduce 126
	'^'  reduce 126
	NUM_EQ  reduce 126
	NUM_NE  reduce 126
	STR_EQ  reduce 126
	STR_NE  reduce 126
	CMP  reduce 126
	CMP_NUM  reduce 126
	SMART_EQ  reduce 126
	NUM_LE  reduce 126
	'>'  reduce 126
	NUM_GE  reduce 126
	STR_LT  reduce 126
	STR_LE  reduce 126
	STR_GT  reduce 126
	STR_GE  reduce 126
	DESP_I  reduce 126
	DESP_D  reduce 126
	'.'  reduce 126
	'*'  reduce 126
	'/'  reduce 126
	X  reduce 126
	STR_REX  reduce 126
	STR_NO_REX  reduce 126
	POW  reduce 126
	FLECHA  reduce 126
	')'  reduce 126
	']'  reduce 126
	'}'  reduce 126
	';'  reduce 126

	paqueteID  goto 65
	expresion  goto 124
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84
	handle  goto 125


state 37
	expresion : '&' . funcion  (40)

	ID  shift 36
	ID_P  shift 49
	.  error

	paqueteID  goto 65
	funcion  goto 126


state 38
	lectura : '<' . expresion '>'  (139)
	lectura : '<' . '>'  (140)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'>'  shift 127
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 128
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 39
	aritmetica : '+' . expresion  (179)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 129
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 40
	aritmetica : '-' . expresion  (180)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 130
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 41
	variable : '%' . VAR  (92)
	variable : '%' . paqueteVar VAR  (95)
	acceso : '%' . expresion  (122)

	VAR  shift 131
	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 132
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	paqueteVar  goto 133
	colParen  goto 83
	colRef  goto 84


state 42
	logico : '!' . expresion  (150)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 134
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 43
	binario : '~' . expresion  (143)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 135
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 44
	aritmetica : MAS_MAS . expresion  (181)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 136
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 45
	aritmetica : MENOS_MENOS . expresion  (182)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	paqueteID  goto 65
	expresion  goto 137
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	colParen  goto 83
	colRef  goto 84


state 46
	colParen : '(' . lista ')'  (110)
	colParen : '(' . ')'  (111)

	ENTERO  shift 12
	DECIMAL  shift 13
	STDIN  shift 14
	STDOUT  shift 15
	STDERR  shift 16
	MY  shift 17
	OUR  shift 18
	Q  shift 30
	QQ  shift 31
	QR  shift 32
	QW  shift 33
	QX  shift 34
	LLNOT  shift 35
	ID  shift 36
	'&'  shift 37
	'<'  shift 38
	'+'  shift 39
	'-'  shift 40
	'%'  shift 41
	'!'  shift 42
	'~'  shift 43
	MAS_MAS  shift 44
	MENOS_MENOS  shift 45
	'('  shift 46
	')'  shift 138
	'['  shift 47
	'{'  shift 110
	ID_P  shift 49
	'\''  shift 51
	'"'  shift 52
	'`'  shift 53
	'$'  shift 54
	'@'  shift 55
	'\\'  shift 56
	.  error

	lista  goto 139
	paqueteID  goto 65
	expresion  goto 66
	numero  goto 67
	cadena  goto 68
	variable  goto 69
	varMulti  goto 70
	asignacion  goto 71
	binario  goto 72
	aritmetica  goto 73
	logico  goto 74
	comparacion  goto 75
	coleccion  goto 76
	acceso  goto 77
	funcion  goto 78
	lectura  goto 79
	std  goto 80
	regulares  goto 81
	listaR  goto 82
	colParen  goto 83
	colRef  goto 84


state 47
	colRef : '[' . lista ']'  (112)
	colRef : '[' . ']'  (113)
